Update Cards styling

--- a/projects/styles/global.css
+++ b/projects/styles/global.css
@@ -1,3 +1,304 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.top-section, footer p, .layerButton, .loginBannerLayer p, .loginBannerLayer, .right-section, .layerText, .left-section, .errorPage {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .loginPage, .errorPage {
+    height: 100vh;
+    width: 100vw;
+  }
+  
+  .layerVideo iframe, footer p, .right-layer, .right-section, .layerText {
+    height: 100%;
+    width: 100%;
+  }
+  
+  .errorPage {
+    background-color: #e47909;
+  }
+  
+  .loginPage {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .left-section {
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+  }
+  
+  .layerText {
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.5490196078);
+    color: rgb(226, 226, 226);
+    gap: 10px;
+  }
+  .layerText p:first-child {
+    font-size: 1.8rem;
+  }
+  
+  .right-section {
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+  .right-layer {
+    display: grid;
+    justify-content: center;
+    grid-template-rows: 20% 20% 60%;
+    background-color: rgb(226, 226, 226);
+  }
+  
+  .loginTitleLayer {
+    width: 100%;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.6509803922);
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    font-size: 2rem;
+    color: #e47909;
+  }
+  .loginTitleLayer p {
+    border-bottom: 3px solid #e47909;
+  }
+  
+  .loginBannerLayer {
+    font-size: 0.8rem;
+    color: rgb(100, 100, 100);
+  }
+  .loginBannerLayer p {
+    height: 50px;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.247);
+  }
+  
+  .formLayer {
+    display: flex;
+    flex-direction: column;
+    width: 30vw;
+    gap: 10px;
+  }
+  
+  .inputForm {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    color: #e47909;
+    font-size: 0.9rem;
+    gap: 5px;
+  }
+  
+  .inputForm input {
+    height: 50px;
+    border-radius: 10px;
+    border: 1px solid transparent;
+    box-shadow: 0.5px 0.5px 5px 0.5px gray;
+    outline: none;
+    color: rgb(44, 44, 44);
+    font-size: 1.1rem;
+    padding: 5px;
+  }
+  
+  .inputForm input:focus {
+    border: 1px solid rgb(69, 184, 255);
+  }
+  
+  .formLayer a {
+    font-size: 0.7rem;
+    text-decoration: none;
+    color: #e47909;
+  }
+  
+  .formLayer a:hover {
+    color: #c56b0a;
+  }
+  
+  .layerButton {
+    padding: 2% 0;
+  }
+  .layerButton button {
+    width: 100%;
+    height: 50px;
+    border-radius: 10px;
+    background-color: #e47909;
+    color: white;
+    border: 0px solid transparent;
+    font-size: 1.3rem;
+  }
+  .layerButton button:hover {
+    background-color: #ff8400;
+    cursor: pointer;
+  }
+  .layerButton button:active {
+    transform: translateY(2px);
+  }
+  
+  footer {
+    position: absolute;
+    top: 98vh;
+    width: 100%;
+    height: 2vh;
+    font-size: 0.8rem;
+    color: rgb(226, 226, 226);
+    background-color: rgba(0, 0, 0, 0.466);
+  }
+  
+  .logo-layer {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 5vw;
+  }
+  .logo-layer img {
+    width: 200px;
+  }
+  
+  .profile-layer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
+  
+  #avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #e47909;
+  }
+  
+  body {
+    height: 100vh;
+    background-color: #58717b;
+  }
+  
+  main {
+    background-color: #58717b;
+    display: flex;
+    padding: 0 50px;
+    flex-direction: column;
+  }
+  
+  main > p:first-child {
+    font-size: 1.5rem;
+  }
+  
+  main > p:nth-child(3) {
+    font-size: 0.8rem;
+  }
+  
+  .cards {
+    display: grid;
+    gap: 20px;
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 25vw));
+    background-color: #253237;
+    border-radius: 5px;
+  }
+  
+  .card-inside {
+    background-color: white;
+    border-radius: 10px;
+  }
+  
+  .top-section {
+    height: 50%;
+    background-color: #e47909;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    padding: 10px;
+  }
+  .top-section img {
+    height: 100px;
+    border-radius: 10px;
+  }
+  
+  .bottom-section {
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 10px;
+  }
+  
+  .title-section {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  
+  .instructor-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
+    gap: 15px;
+  }
+  .instructor-section img {
+    width: 50px;
+    border-radius: 50%;
+  }
+  
+  .instructor-role {
+    font-size: 0.8rem;
+  }
+  
+  #courseBtn {
+    color: white;
+    width: 200px;
+    box-shadow: -1px 2px 2px gray;
+  }
+  
+  #courseBtn:active {
+    box-shadow: 0px 0px 3px gray;
+  }
+  
+  .videoCourseLayer {
+    width: 100%;
+    height: 85%;
+    background-color: #253237;
+    border-radius: 10px;
+  }
+  
+  .layerSwitchButton {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  
+  .layerVideo {
+    height: 100%;
+  }
+  
+  .buttonControls {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .buttonControls button {
+    width: 200px;
+    height: 30px;
+  }
+  
+  .detailCourse {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+  }
+  
+  .iframeMain {
+    display: flex;
+    height: 80%;
+    margin: 0 50px;
+    background-color: #253237;
+  }
+  .iframeMain iframe {
+    width: 100%;
+  }/*# sourceMappingURL=app-sas.css.map */
